# alphahex

./: .gitignore  .vercelignore  AGENTS.md  README.md  README_ENGINE.md  TODO.md  pyproject.toml  requirements-training.txt  requirements.txt  vercel.json
.github/workflows/: vercel-production.yml
api/: index.py
catan-1v1-bot/: AGENTS.md  README.md  pyproject.toml
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  format.js  layout.js  styles.css
web/src/components/: ActionLog.jsx  ActionPanel.jsx  ActionsPanel.jsx  BankPanel.jsx  BankTradePanel.jsx  Board.jsx  Dice.jsx  DiscardPanel.jsx  LegendModal.jsx  PlayerPanel.jsx  SummaryPanel.jsx
