[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-bot-backend"
version = "0.1.0"
description = "Standalone 1v1 Catan simulator backend and web API."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "numpy>=1.26",
  "torch>=2.2",
  "uvicorn[standard]>=0.27",
]

[tool.setuptools.packages.find]
where = ["packages/engine", "packages/bots", "packages/api"]
include = ["catan_engine*", "catan_bots*", "catan_api*"]
