[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-1v1-bot"
version = "0.1.0"
description = "Standalone 1v1 Catan-style simulator and bot framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["packages/engine", "packages/bots", "packages"]
include = ["catan_engine*", "catan_bots*", "training*"]

[tool.pytest.ini_options]
pythonpath = ["packages/engine", "packages/bots", "packages"]
testpaths = ["packages/engine/tests"]
